PUT, DELETE added. Minor fixes to get last
